--- a/CHSZiK/package.json
+++ b/CHSZiK/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@pdftron/webviewer": "^10.1.1",
+    "docx-preview": "^0.1.15",
     "ng2-pdf-viewer": "^9.1.5",
     "ngx-extended-pdf-viewer": "^17.0.0-alpha.6",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "viewerjs": "^1.11.3",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
