--- a/CHSZiK/package.json
+++ b/CHSZiK/package.json
@@ -21,12 +21,16 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@egjs/ngx-flicking": "^4.10.9",
     "@pdftron/webviewer": "^10.1.1",
     "docx-preview": "^0.1.15",
+    "ng-image-slider": "^7.0.0",
     "ng2-pdf-viewer": "^9.1.5",
     "ngx-extended-pdf-viewer": "^17.0.0-alpha.6",
+    "ngx-owl-carousel-o": "^15.0.1",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
+    "swiper": "^9.3.2",
     "tslib": "^2.3.0",
     "viewerjs": "^1.11.3",
     "zone.js": "~0.12.0"
